2006-07-14  Matthew Nicholson  <mnicholson@digium.com>

	* ChangeLog: Added.
	* TODO: Added.
	* MANIFEST.in: Added ChangeLog and TODO.
