@@ -4,3 +4,7 @@
 
 The ChangeLog needs to be updated from the monotone logs.
 
+== Documentation ==
+
+All of pyst's inline documentation needs to be updated.
+
